--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +236,7 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
+          "Russia",
           "UK",
           "Netherlands",
           "Ukraine",
@@ -253,7 +254,6 @@
           "United States",
           "Israel",
           "Antarctica",
-          "Russia",
           "Oman",
           "Romania",
           "Greece",
@@ -315,6 +315,7 @@
          "name": "",
          "type": "choropleth",
          "z": [
+          63,
           205,
           2,
           92,
@@ -332,7 +333,6 @@
           174,
           30,
           1,
-          62,
           14,
           2,
           3,
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Russia</td>\n",
-       "      <td>62</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1392,7 +1392,7 @@
        "0                UK    205\n",
        "1     United States    174\n",
        "2           Ukraine     92\n",
-       "3            Russia     62\n",
+       "3            Russia     63\n",
        "4            Israel     30\n",
        "..              ...    ...\n",
        "70            Libya      1\n",
@@ -1404,7 +1404,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1438,27 +1438,27 @@
           "Russia",
           "Israel",
           "Germany",
-          "Japan",
           "Australia",
+          "Japan",
           "Iraq",
           "Oman",
-          "Canada",
           "Ireland",
+          "Canada",
           "India",
           "France",
           "China",
           "Egypt",
-          "Turkey",
           "New Zealand",
-          "Cuba",
-          "Brazil",
+          "Turkey",
           "Cyprus",
           "Austria",
-          "United Kingdom",
+          "Cuba",
           "Pakistan",
+          "Brazil",
+          "United Kingdom",
+          "Sweden",
           "South Africa",
           "Afghanistan",
-          "Sweden",
           "Spain",
           "Denmark",
           "Serbia",
@@ -1472,21 +1472,21 @@
           "Singapore",
           "Mali",
           "South Sudan",
-          "Chile",
-          "Norway",
-          "Romania",
-          "Uganda",
-          "Argentina",
-          "Colombia",
-          "Netherlands",
-          "Finland",
           "Belgium",
+          "Netherlands",
+          "Romania",
+          "Norway",
+          "Chile",
+          "Argentina",
+          "Uganda",
+          "Colombia",
+          "Finland",
           "Uruguay",
-          "Nepal",
           "United Arab Emirates",
           "Myanmar",
-          "Algeria",
+          "Nepal",
           "Gibraltar",
+          "Algeria",
           "Kuwait",
           "Morocco",
           "Philippines",
@@ -1514,7 +1514,7 @@
           205,
           174,
           92,
-          62,
+          63,
           30,
           28,
           22,
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2643,7 +2643,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USA</td>\n",
-       "      <td>379</td>\n",
+       "      <td>381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2703,7 +2703,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Moscow</td>\n",
-       "      <td>24</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -2721,7 +2721,7 @@
       ],
       "text/plain": [
        "          GPE  count\n",
-       "0         USA    379\n",
+       "0         USA    381\n",
        "1          UK    282\n",
        "2      Russia    186\n",
        "3     Ukraine    152\n",
@@ -2733,12 +2733,12 @@
        "9      Canada     36\n",
        "10     France     36\n",
        "11  Australia     26\n",
-       "12     Moscow     24\n",
+       "12     Moscow     25\n",
        "13      Japan     23\n",
        "14       Iran     21"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2841,12 +2841,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Loch K. Johnson</td>\n",
+       "      <td>Michael Morell</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Michael Morell</td>\n",
+       "      <td>Loch K. Johnson</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2871,22 +2871,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Edward Snowden</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
        "      <td>Gorbachev</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Edward Snowden</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Johnson</td>\n",
+       "      <td>Christopher Andrew</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Christopher Andrew</td>\n",
+       "      <td>David Priess</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2900,19 +2900,19 @@
        "2    Winston Churchill     16\n",
        "3        John le Carré     14\n",
        "4            Joe Biden     11\n",
-       "5      Loch K. Johnson      9\n",
-       "6       Michael Morell      9\n",
+       "5       Michael Morell      9\n",
+       "6      Loch K. Johnson      9\n",
        "7          David Omand      7\n",
        "8               Stalin      7\n",
        "9                 Bush      6\n",
        "10          James Bond      6\n",
-       "11      Edward Snowden      5\n",
-       "12           Gorbachev      5\n",
-       "13             Johnson      5\n",
-       "14  Christopher Andrew      5"
+       "11           Gorbachev      5\n",
+       "12      Edward Snowden      5\n",
+       "13  Christopher Andrew      5\n",
+       "14        David Priess      5"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +2981,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>CIA</td>\n",
-       "      <td>157</td>\n",
+       "      <td>158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3020,12 +3020,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Joint Intelligence Committee</td>\n",
+       "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Schar School of Policy and Government</td>\n",
+       "      <td>Joint Intelligence Committee</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3059,7 +3059,7 @@
       ],
       "text/plain": [
        "                                      ORG  count\n",
-       "0                                     CIA    157\n",
+       "0                                     CIA    158\n",
        "1                                     KGB     32\n",
        "2                                     SIS     26\n",
        "3                                     FBI     25\n",
@@ -3067,8 +3067,8 @@
        "5                    British Intelligence     17\n",
        "6                                     NSA     17\n",
        "7                                  Allied     17\n",
-       "8            Joint Intelligence Committee     16\n",
-       "9   Schar School of Policy and Government     16\n",
+       "8   Schar School of Policy and Government     16\n",
+       "9            Joint Intelligence Committee     16\n",
        "10                                    SOE     15\n",
        "11                                   NATO     14\n",
        "12                                     AI     12\n",
@@ -3076,7 +3076,7 @@
        "14                               Congress     10"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3118,7 +3118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
