--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "2"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2605,7 +2605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2631,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2692,12 +2692,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>China</td>\n",
+       "      <td>Iraq</td>\n",
        "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Iraq</td>\n",
+       "      <td>China</td>\n",
        "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2707,12 +2707,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>37</td>\n",
+       "      <td>France</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>France</td>\n",
+       "      <td>Canada</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2732,7 +2732,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Iran</td>\n",
+       "      <td>Turkey</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2747,18 +2747,18 @@
        "3     Ukraine    160\n",
        "4     Germany     68\n",
        "5      Israel     56\n",
-       "6       China     41\n",
-       "7        Iraq     41\n",
+       "6        Iraq     41\n",
+       "7       China     41\n",
        "8      London     39\n",
-       "9      Canada     37\n",
-       "10     France     37\n",
+       "9      France     38\n",
+       "10     Canada     37\n",
        "11  Australia     27\n",
        "12     Moscow     25\n",
        "13      Japan     23\n",
-       "14       Iran     21"
+       "14     Turkey     21"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2805,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2932,7 @@
        "14          Gorbachev      5"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2969,7 +2969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3040,12 +3040,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Joint Intelligence Committee</td>\n",
+       "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Schar School of Policy and Government</td>\n",
+       "      <td>Joint Intelligence Committee</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3087,8 +3087,8 @@
        "5                                  Allied     18\n",
        "6                    British Intelligence     17\n",
        "7                                     NSA     17\n",
-       "8            Joint Intelligence Committee     16\n",
-       "9   Schar School of Policy and Government     16\n",
+       "8   Schar School of Policy and Government     16\n",
+       "9            Joint Intelligence Committee     16\n",
        "10                                    SOE     15\n",
        "11                                  Hamas     14\n",
        "12                                   NATO     14\n",
@@ -3096,7 +3096,7 @@
        "14             the Intelligence Community     10"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3138,7 +3138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
