--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -112,7 +112,8 @@
     "    'document': 'Document',\n",
     "    'conferencePaper': 'Conference paper',\n",
     "    'film': 'Film',\n",
-    "    'presentation': 'Presentation'\n",
+    "    'presentation': 'Presentation',\n",
+    "    'audioRecording':'Podcast'\n",
     "}\n",
     "df['Publication type'] = df['Publication type'].replace(mapping_types)\n",
     "\n",
