--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "2"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +87,16 @@
     "        author_names = []\n",
     "        for author in authors_info:\n",
     "            creator_type = author.get('creatorType')\n",
-    "            valid_types = ['author', 'contributor', 'guest', 'podcaster']\n",
-    "            if creator_type in valid_types:  # Include all identified creator types\n",
+    "            valid_types = ['author', 'contributor', 'editor', 'guest', 'podcaster']\n",
+    "            \n",
+    "            if item['data']['itemType'] == 'bookSection' and creator_type == 'editor':\n",
+    "                continue  # Skip adding 'editor' for Book chapters\n",
+    "            \n",
+    "            if creator_type in valid_types:\n",
     "                if 'firstName' in author and 'lastName' in author:\n",
     "                    author_names.append(author['firstName'] + ' ' + author['lastName'])\n",
     "                elif 'name' in author:\n",
-    "                    author_names.append(author['name'])  # Handling cases where 'firstName' and 'lastName' are absent\n",
+    "                    author_names.append(author['name'])\n",
     "                \n",
     "        authors = ', '.join(author_names)\n",
     "        \n",
@@ -166,7 +170,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# items = zot.everything(zot.top())\n",
+    "\n",
+    "# data3=[]\n",
+    "# columns3=['Title','Publication type', 'Link to publication', 'Abstract', 'Zotero link', 'Date published', 'FirstName2', 'Publisher', 'Journal', 'Date added', 'Col key']\n",
+    "\n",
+    "# for item in items:\n",
+    "#     # Extracting various types of creators\n",
+    "#     authors = \"\"\n",
+    "#     if 'creators' in item['data']:\n",
+    "#         authors_info = item['data']['creators']\n",
+    "#         author_names = []\n",
+    "#         for author in authors_info:\n",
+    "#             creator_type = author.get('creatorType')\n",
+    "#             valid_types = ['author', 'contributor', 'editor', 'guest', 'podcaster']\n",
+    "#             if creator_type in valid_types:  # Include all identified creator types\n",
+    "#                 if 'firstName' in author and 'lastName' in author:\n",
+    "#                     author_names.append(author['firstName'] + ' ' + author['lastName'])\n",
+    "#                 elif 'name' in author:\n",
+    "#                     author_names.append(author['name'])  # Handling cases where 'firstName' and 'lastName' are absent\n",
+    "                \n",
+    "#         authors = ', '.join(author_names)\n",
+    "        \n",
+    "#     data3.append((\n",
+    "#         item['data']['title'], \n",
+    "#         item['data']['itemType'], \n",
+    "#         item['data']['url'], \n",
+    "#         item['data']['abstractNote'], \n",
+    "#         item['links']['alternate']['href'],\n",
+    "#         item['data'].get('date'),\n",
+    "#         authors,  # Add the concatenated authors string\n",
+    "#         item['data'].get('publisher'),\n",
+    "#         item['data'].get('publicationTitle'),\n",
+    "#         item['data']['dateAdded'],\n",
+    "#         item['data']['collections']\n",
+    "#         )) \n",
+    "# # pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "# df = pd.DataFrame(data3, columns=columns3)\n",
+    "\n",
+    "# mapping_types = {\n",
+    "#     'thesis': 'Thesis',\n",
+    "#     'journalArticle': 'Journal article',\n",
+    "#     'book': 'Book',\n",
+    "#     'bookSection': 'Book chapter',\n",
+    "#     'blogPost': 'Blog post',\n",
+    "#     'videoRecording': 'Video',\n",
+    "#     'podcast': 'Podcast',\n",
+    "#     'magazineArticle': 'Magazine article',\n",
+    "#     'webpage': 'Webpage',\n",
+    "#     'newspaperArticle': 'Newspaper article',\n",
+    "#     'report': 'Report',\n",
+    "#     'forumPost': 'Forum post',\n",
+    "#     'manuscript': 'Manuscript',\n",
+    "#     'document': 'Document',\n",
+    "#     'conferencePaper': 'Conference paper',\n",
+    "#     'film': 'Film',\n",
+    "#     'presentation': 'Presentation',\n",
+    "#     'audioRecording':'Podcast'\n",
+    "# }\n",
+    "# df['Publication type'] = df['Publication type'].replace(mapping_types)\n",
+    "\n",
+    "# mapping_publisher = {\n",
+    "#     'Taylor & Francis Group': 'Taylor and Francis',\n",
+    "#     'Taylor and Francis': 'Taylor and Francis',\n",
+    "#     'Taylor & Francis': 'Taylor and Francis',\n",
+    "#     'Routledge': 'Routledge',\n",
+    "#     'Routledge Handbooks Online': 'Routledge',\n",
+    "#     'Praeger Security International': 'Praeger',\n",
+    "#     'Praeger': 'Praeger'\n",
+    "# }\n",
+    "# df['Publisher'] = df['Publisher'].replace(mapping_publisher)\n",
+    "\n",
+    "# # df['Publisher'] = df['Publisher'].replace(['Taylor & Francis Group', 'Taylor and Francis', 'Taylor & Francis'], 'Taylor and Francis')\n",
+    "# # df['Publisher'] = df['Publisher'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
+    "# # df['Publisher'] = df['Publisher'].replace(['Praeger Security International', 'Praeger'], 'Praeger')\n",
+    "\n",
+    "# mapping_journal = {\n",
+    "#     'International Journal of Intelligence and Counterintelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
+    "#     'International Journal of Intelligence and CounterIntelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
+    "#     'Intelligence and national security': 'Intelligence and National Security',\n",
+    "#     'Intelligence and National Security': 'Intelligence and National Security',\n",
+    "#     'Intelligence & National Security': 'Intelligence and National Security'\n",
+    "# }\n",
+    "\n",
+    "# df['Journal'] = df['Journal'].replace(mapping_journal)\n",
+    "\n",
+    "# # df['Journal'] = df['Journal'].replace(['International Journal of Intelligence and Counterintelligence', 'International Journal of Intelligence and CounterIntelligence'], 'Intl Journal of Intelligence and Counterintelligence')\n",
+    "# # df['Journal'] = df['Journal'].replace(['Intelligence and national security', 'Intelligence and National Security', 'Intelligence & National Security'], 'Intelligence and National Security')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1604,7 @@
        "[79 rows x 2 columns]"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -2602,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2619,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2631,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2693,7 +2793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2707,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2719,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2946,7 @@
        "14  Washington     22"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 431,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2893,7 +2993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -3020,7 +3120,7 @@
        "14             Johnson      5"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3057,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3284,7 @@
        "14                  Intelligence Services     11"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 433,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3226,7 +3326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
